--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=demo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/prueba
+spring.datasource.hikari.minimum-idle-connections=10
+spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.data.jpa.repositories.enabled=true
+spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql: false
+
+# HikariCP settings for MySQL
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.pool-name=MySQLHikariCP
